--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -12,20 +12,27 @@ $font-family: "Helvetica", sans-serif;
 $font-size: 12pt;
 $font-family-code: "Fira Code", monospace;
 $font-size-code: 10pt;
+$width-content: 60em;
 
 body {
   color: $fg;
   background: $bg;
+  background-image: url("/assets/bg.jpg");
+  background-repeat: repeat;
   margin: 0;
   font-family: $font-family;
   font-size: $font-size;
+}
+
+img {
+  width: 100%;
 }
 
 a {
   color: $fg-link;
 }
 main {
-  max-width: 60em;
+  max-width: $width-content;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
@@ -52,12 +59,23 @@ main {
 #metabox {
   float: right;
   clear: right;
-  width: 20em;
-  height: 300px;
+  width: 30%;
   background: $bg;
   border: 1px solid $border-color;
+  border-bottom-width: 0;
   border-radius: $border-radius;
   margin: 0 0 $padding-containers $padding-containers;
+
+  & section {
+    display: flow-root;
+    border-bottom: 1px solid $border-color;
+  }
+  & section.header {
+    text-align: center;
+  }
+  & section.info {
+    padding: 0 $padding-containers;
+  }
 }
 
 #content {
@@ -87,5 +105,19 @@ main {
     background: $bg;
     border-radius: $border-radius;
     border: 1px solid $border-color;
+  }
+
+  code {
+    padding: 0.2em;
+  }
+
+  pre {
+    padding: 1em;
+    overflow-x: auto;
+    code {
+      padding: 0;
+      border: none;
+      background: none;
+    }
   }
 }
