--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -14,6 +14,7 @@ $border-color: #39434d;
 $border-color-header: #184851;
 $border-radius: 2px;
 $padding-containers: 20px;
+$padding-flow: 16px;
 $padding-containers-small: 10px;
 $font-size: 12pt;
 $font-size-logo: 14pt;
@@ -118,6 +119,10 @@ details summary {
   cursor: pointer;
 }
 
+details {
+  margin: $padding-flow 0;
+}
+
 h1.page-title {
   font-size: 2em;
 }
@@ -154,7 +159,7 @@ blockquote {
   font-style: italic;
   background: $bg-inset;
   border-radius: $border-radius;
-  padding: 0 $padding-containers;
+  padding: 0 $padding-flow;
   margin-left: 0;
 }
 
@@ -169,6 +174,17 @@ code {
   padding: 0.2em;
 }
 
+kbd {
+  font-family: $font-family-code;
+  font-size: $font-size-code;
+  padding: 0 0.5em;
+  background: $bg-inset;
+  border-radius: 4px;
+  font-weight: bold;
+  border: 1px solid $border-color;
+  box-shadow: 0 2px 0 -1px $bg-overlay, 0 2px 0 $border-color;
+}
+
 pre {
   padding: 1em;
   overflow-x: auto;
@@ -181,7 +197,7 @@ pre {
 
 table {
   border-collapse: collapse;
-  margin-bottom: $padding-containers;
+  margin-bottom: $padding-flow;
 
   td, th {
     padding: $padding-containers-small;
