--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -268,6 +268,13 @@ table {
       margin-left: 1em;
     }
   }
+
+  .search-results {
+    position: absolute;
+    background: $bg-overlay;
+    border: 1px solid $border-color;
+    padding: $padding-containers;
+  }
 }
 
 .content-sidebar {
