Improve UX of search results

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -11,7 +11,7 @@ $fg-strong: #eee;
 $fg-link: #4fbdff;
 $border-color: #39434d;
 $border-color-header: #184851;
-$border-radius: 2px;
+$border-radius: 4px;
 $padding-containers: 20px;
 $padding-flow: 16px;
 $padding-containers-small: 10px;
@@ -90,6 +90,19 @@ h3 {font-size: 1.17em;}
 h4 {font-size: 1.00em;}
 h5 {font-size: 0.83em;}
 h6 {font-size: 0.75em;}
+
+button {
+  background: $bg-inset;
+  color: $fg;
+  border-radius: $border-radius;
+  border: 1px solid $border-color;
+  padding: $padding-containers-small 1em;
+
+  &:hover {
+    background: $bg-overlay;
+    cursor: pointer;
+  }
+}
 
 input {
   border-radius: $border-radius;
@@ -255,11 +268,6 @@ table {
     color: $fg;
   }
 
-  #c20-search-mountpoint {
-    flex-grow: 1;
-    position: relative;
-  }
-
   .c20-name-short {
     display: none;
   }
@@ -267,11 +275,23 @@ table {
     display: inline-block;
   }
 
+  #c20-search-mountpoint {
+    flex-grow: 1;
+    position: relative;
+  }
+
+  .clear-button {
+    float: right;
+    margin-top: $padding-flow;
+    margin-left: $padding-flow;
+  }
+
   .search-input {
     transition: width $transition-time;
     width: 60%;
     &:focus, &.nonempty {
       width: 100%;
+      border-radius: $border-radius $border-radius 0 0;
     }
   }
 
@@ -280,7 +300,38 @@ table {
     position: absolute;
     background: $bg-overlay;
     border: 1px solid $border-color;
-    padding: $padding-containers;
+    border-top: none;
+    border-radius: 0 0 $border-radius $border-radius;
+    padding: 0 $padding-containers;
+    display: flow-root;
+
+    ul {
+      list-style: none;
+      margin: 0 0 $padding-containers 0;
+      padding: 0;
+    }
+
+    li {
+      border: 1px solid $border-color;
+      border-top: none;
+      padding: $padding-containers-small;
+      padding-bottom: $padding-containers-small - 2px;
+
+      &:first-child {
+        border-top: 1px solid $border-color;
+        border-top-left-radius: $border-radius;
+        border-top-right-radius: $border-radius;
+      }
+
+      &:last-child {
+        border-bottom-left-radius: $border-radius;
+        border-bottom-right-radius: $border-radius;
+      }
+
+      &.selected {
+        background: $bg-info;
+      }
+    }
   }
 
   .c20-top-nav {
