Add tool metadata

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -7,7 +7,7 @@ $bg-info: #373457;
 $bg-danger: #53332c;
 $bg-success: #1c3e34;
 $bg-tag: #0b352b;
-$bg-tool: navy;
+$bg-tool: #171b4b;
 $fg: #ccc;
 $fg-faded: #888;
 $fg-strong: #eee;
