Add source and edit links to top of the article

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -139,8 +139,19 @@ details {
   margin: $padding-flow 0;
 }
 
-h1.page-title {
-  font-size: 2em;
+.page-title {
+  border-bottom: 1px solid $border-color;
+  margin-bottom: $padding-containers;
+  display: flex;
+  align-content: space-between;
+  align-items: baseline;
+
+  h1 {
+    padding-bottom: 0;
+    font-size: 2em;
+    border-bottom: none;
+    flex-grow: 1;
+  }
 }
 
 a.header-anchor {
