Add Aether documentation; fix #pathfinder info, support to/from workflows

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -75,13 +75,13 @@ a[href^="mailto:"]:after {
   font-size: 50%;
 }
 
-a[href^="/blam/tags/"]:after {
+a[href*="/tags/"]:after {
   content: "🏷️";
   vertical-align: super;
   font-size: 50%;
 }
 
-a[href^="/tools/"]:after {
+a[href*="/tools/"]:after {
   content: "🔧";
   vertical-align: super;
   font-size: 50%;
