Add some tips about physics, sapien, pathfinding, and projectiles

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -75,16 +75,17 @@ a[href^="mailto:"]:after {
   font-size: 50%;
 }
 
-a[href*="/tags/"]:after {
-  content: "🏷️";
-  vertical-align: super;
-  font-size: 50%;
-}
-
-a[href*="/tools/"]:after {
-  content: "🔧";
-  vertical-align: super;
-  font-size: 50%;
+a:not([href^="http"]) {
+  &[href*="/tags/"]:after {
+    content: "🏷️";
+    vertical-align: super;
+    font-size: 50%;
+  }
+  &[href*="/tools/"]:after {
+    content: "🔧";
+    vertical-align: super;
+    font-size: 50%;
+  }
 }
 
 button {
