Convert survey page into results page

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -119,6 +119,12 @@ label {
   cursor: pointer;
 }
 
+progress, meter {
+  width: 100%;
+  background: $bg-inset;
+  border: 1px solid $border-color;
+}
+
 input {
   display: block;
   border-radius: $border-radius;
