--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -289,6 +289,11 @@ pre, code {
 
 code {
   padding: 0.2em;
+
+  &.language-console > .hljs-name:before {
+    content: "halo( ";
+    color: $fg-faded;
+  }
 }
 
 kbd {
