General content pass: add misc tips, new pages, reword old content, improve CSS for code blocks

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -292,8 +292,13 @@ code {
 
   &.language-console > .hljs-name:before {
     content: "halo( ";
-    color: $fg-faded;
+    transition: opacity $transition-time;
+    color: fuchsia;
   }
+}
+
+pre:hover code.language-console > .hljs-name:before {
+  opacity: 0.5;
 }
 
 kbd {
