Add some of Jakey/Lolibox's notes, improve search index

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -576,6 +576,12 @@ table.tag-struct {
       padding: 0;
     }
   }
+
+  figure.inline {
+    float: none;
+    clear: none;
+    width: auto;
+  }
 }
 
 .content-footer {
