Add spanish stop words; style headers in sidebar summaries as inline

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -232,6 +232,16 @@ details summary {
   cursor: pointer;
 }
 
+summary h1,
+summary h2,
+summary h3,
+summary h4,
+summary h5,
+summary h6 {
+  display: inline-block;
+  margin: 0;
+}
+
 details {
   margin: $padding-flow 0;
 }
