convert blam.sav network settings to YAML spec

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -450,7 +450,7 @@ table.type-def {
   .has-embedded {
     background: $bg-inset;
     .field-name {
-      text-transform: uppercase;
+      // text-transform: uppercase;
       font-weight: bold;
     }
   }
