Add gamepad menu bindings, improve style of struct tables, deduplicate types

--- a/src/assets/style.scss
+++ b/src/assets/style.scss
@@ -447,10 +447,9 @@ table.type-def {
   & {
     margin-bottom: 0;
   }
-  .has-embedded {
-    background: $bg-inset;
+  .has-embedded-class-struct {
     .field-name {
-      // text-transform: uppercase;
+      text-transform: uppercase;
       font-weight: bold;
     }
   }
